# c1-10p-esp32

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  c1-10p-esp32.ino  partitions.csv  platformio.ini  sdkconfig.defaults
OpenMV/: main.py
components/: README.md
docs/: INSTRUCTIONS.md
docs/reference/: Padawan360.md  Penumbra.md  PenumbraShadowMD.md  ROS2.md  Reeltwo.md  SHADOW.md  WPILib.md  bluepad32.md  keyframes.md  micro-ROS.md
main/: CMakeLists.txt  SettingsSystem.h  SettingsUser.h  TankDrive.cpp  TankDrive.h  TankDriveSabertooth.cpp  TankDriveSabertooth.h  main.c  sketch.cpp
main/chopper/: MotorSafety.cpp  Timer.cpp
main/chopper/drive/: DifferentialDrive.cpp  DifferentialDriveSabertooth.cpp  RobotDriveBase.cpp  SingleDrive.cpp  SingleDriveSabertooth.cpp
main/chopper/motorController/: SabertoothController.cpp
main/core/: AnimatedEvent.h
main/drive/: DomeDrive.h  DomeDriveSabertooth.h  DomePosition.h  DomeSensorAnalogPositionProvider.h  TankDrive.cpp  TankDrive.h  TankDriveSabertooth.cpp  TankDriveSabertooth.h
main/include/: MathUtil.h  PinMap.h  SettingsBluetooth.h  SettingsBluetooth.h.example  SettingsSystem.h  SettingsUser.h
main/include/chopper/: DriverStation.h  MotorSafety.h  Timer.h
main/include/chopper/core/: AnimatedEvent.h  ButtonState.h  ControllerDecorator.h  ControllerRoles.h  Controllers.h
main/include/chopper/dome/: DomePosition.h  DomePositionProvider.h  DomeSensorAnalogPositionProvider.h  RSSMachine.h
main/include/chopper/drive/: DifferentialDrive.h  DifferentialDriveSabertooth.h  RobotDriveBase.h  SabertoothDrive.h  SingleDrive.h  SingleDriveSabertooth.h
main/include/chopper/filter/: SlewRateLimiter.h
main/include/chopper/motorController/: MotorController.h  SabertoothController.h
main/include/chopper/sensor/: AnalogMonitor.h
main/include/chopper/servo/: Dispatch.h  Easing.h  RSSMechanism.h  ServoState.h
main/include/chopper/sound/: ExtendedMP3Trigger.h
main/include/settings/: ServoPWM.h  ServoPinMap.h
main/include/wpi/: Synchronization.h  mutex.h  priority_mutex.h
main/motor/: SabertoothDriver.h
patches/: Sabertooth-ESP32.patch
patches/components/: MP3Trigger.patch  Sabertooth.patch  arduino.patch  espsoftwareserial.patch  ghostl.patch  maestro-arduino.patch
src/dome/: Potentiometer.h
src/drive/: TankDrive.h  TankDriveSabertooth.h
src/settings/: pin-map.h  system.h
